task, on the command line, with 'a:'.

+ Suites can now be restarted after task definitions have been deleted 
without manually altering the suite state dump file. Undefined tasks in
the state dump are just be ignored at start up.

+ WARNING for those who override the default task log, work, and share
directory config items, they have been moved up out of the "job
submission" runtime sub-section, because they are common to all job
submission methods. 

+ The main cylc command interface no longer checks that Pyro is
installed, but the commands that it do. Consequently Pyro does not have
to be installed on a remote task host if you choose to use ssh
messaging, and you can still work with suites - but not run them - if
Pyro is not installed on the suite host.

+ Runahead limit now defaults to (the largest of the maximum interval
between cycles in each graph section) plus 1 hour. The extra hour is
sufficient to stop suites with single-cycle intercycle dependence from
stalling. Note that for good cycle interleaving you should set the
runahead limit higher than this!

+ Suites with intercycle connections like the following now run correctly:
    [scheduling]
        initial cycle time = 20110101
        final cycle time = 20110102
        [[dependencies]]
            [[[ 0,12 ]]]
                graph = "A"
            [[[ 6,18 ]]]
                graph  =  "A[T-6] => B"
(previously A would run in 6,18 as well as 0,12, which it shouldn't).

+ Suites can now be told to abort with error status if a shutdown handler 
fails - to allow use of shutdown handlers as suite run diagnosis tools
in cylc test suites.

+ Restored runtime "resolved dependency" graphing (disabled since
internal queues were implemented); and added optional logging of
resolved dependencies.
 
+ The gcapture log window (used to display suite stdout) now only color-highlights 
lines containing the strings CRITICAL, WARNING, or ERROR (not "failed"
or "error" anymore).
