@@ -250,6 +250,7 @@ utility_commands['lockclient'] = ['lockclient', 'lc' ]
 hook_commands = OrderedDict()
 hook_commands['email-suite' ] = ['email-suite'] 
 hook_commands['email-task'  ] = ['email-task' ] 
+hook_commands['diagnose-suite'  ] = ['diagnose-suite' ] 
 
 admin_commands = OrderedDict()
 admin_commands['test-db'     ] = [ 'test-db']
@@ -488,6 +489,7 @@ comsum[ 'scp-transfer' ] = 'Scp-based file transfer for cylc suites'
 # hook
 comsum[ 'email-task'  ] = 'A task event hook script that sends email alerts'
 comsum[ 'email-suite' ] = 'A suite event hook script that sends email alerts'
+comsum[ 'diagnose-suite' ] = 'A suite shutdown event hook for cylc testing'
 
 def typo( str ):
     corrected = str
