@@ -1,0 +1,22 @@
+2012/08/17 12:42:00 INFO - Cold Start 2012010100
+2012/08/17 12:42:07 INFO - [B%2012010106] -triggered off ['A%2012010100']
+2012/08/17 12:42:00 INFO - [A%2012010100] -job submitted
+2012/08/17 12:42:00 INFO - [A%2012010100] -triggered off []
+2012/08/17 12:42:01 INFO - [A%2012010112] -job submitted
+2012/08/17 12:42:01 INFO - [A%2012010112] -triggered off []
+2012/08/17 12:42:01 INFO - [A%2012010200] -HOLDING (beyond suite stop cycle) 2012010118
+2012/08/17 12:42:01 INFO - [A%2012010100] -A%2012010100 started
+2012/08/17 12:42:02 INFO - [A%2012010112] -A%2012010112 started
+2012/08/17 12:42:07 INFO - [A%2012010100] -A%2012010100 succeeded
+2012/08/17 12:42:07 INFO - [B%2012010106] -job submitted
+2012/08/17 12:42:07 INFO - [A%2012010112] -A%2012010112 succeeded
+2012/08/17 12:42:07 INFO - [B%2012010118] -job submitted
+2012/08/17 12:42:08 INFO - [B%2012010118] -triggered off ['A%2012010112']
+2012/08/17 12:42:08 INFO - [B%2012010206] -HOLDING (beyond suite stop cycle) 2012010118
+2012/08/17 12:42:08 INFO - [B%2012010106] -B%2012010106 started
+2012/08/17 12:42:08 INFO - [B%2012010118] -B%2012010118 started
+2012/08/17 12:42:13 INFO - [B%2012010106] -B%2012010106 succeeded
+2012/08/17 12:42:14 INFO - [B%2012010118] -B%2012010118 succeeded
+2012/08/17 12:42:14 WARNING - ALL TASKS FINISHED OR HELD
+2012/08/17 12:42:14 CRITICAL - SHUTTING DOWN
+2012/08/17 12:42:14 WARNING - Calling shutdown handler in the foreground
