@@ -1,0 +1,28 @@
+
+title = "test-suite: zig-zag intercycle dependencies"
+
+description = """
+Task A should only run at 0, 12 hours; Task B at 6, 18"""
+
+[cylc]
+    log resolved dependencies = True
+    [[event hooks]]
+        events = shutdown
+        script = "cylc hook diagnose-suite"
+        abort if shutdown handler fails = True
+        timeout = 0.5  # minutes
+        abort on timeout = True
+
+[scheduling]
+    initial cycle time = 2012010100
+    final cycle time = 2012010118
+    [[dependencies]]
+        [[[0,12]]]
+            graph = "A"
+        [[[6,18]]]
+            graph = "A[T-6] => B"
+
+[runtime]
+    [[root]]
+        [[[environment]]]
+            CYLC_TASK_DUMMY_RUN_LENGTH = 5
